[metadata]
name = TestCaseElf
version = 0.0.1
description = Tese cases generating helper tool.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/panoslin/TestCaseElf
project_urls =
    Bug Tracker = https://github.com/panoslin/TestCaseElf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent
author = Panos Lin
author_email = lghpanos@gmail.com
license = MIT
keywords =
    test
    testing
    test case
    unit test
    test case generat

[options]
packages = test_case_elf
python_requires = >=3.8
install_requires =
    pandas==1.3.5
